--- a/github/workflows/first_action.yml
+++ b/github/workflows/first_action.yml
@@ -1,4 +1,16 @@
-foo: 
-    bar
-    
-    
+name :  shell commands
+
+on: [push]
+
+jobs: 
+    run-shell-command: 
+        runs-on: ubuntu-20.04
+        steps: 
+          - name: echo a string
+            run: echo "hello A"
+          - name: echo multiline
+            run: |
+                node -v
+                npm -v
+                
+                
